# VCUBoards

./: .gitignore  MouserBOM.py  SubstitutionManager.py  bom_substitutions.json
BOMs/: Combined.csv
CHAdeMO_Firmware/: chademo_fsm.c
CHAdeMO_Firmware-backup/: chademo_fsm.h
CHAdeMO_Firmware-backup/chademo_firmware/: CMakeLists.txt  can_test_main.c  chademo_config.h  chademo_fsm.c  chademo_hal.c  flash.sh  main.c
CHAdeMO_Firmware-backup/chademo_firmware/mock_pico/hardware/: spi.h
CHAdeMO_Firmware-backup/chademo_firmware/mock_pico/pico/: types.h
CHAdeMO_Firmware/chademo_firmware/: .gitignore  CMakeLists.txt  blinky_test.uf2  capture_log.py  chademo_can.c  chademo_can.h  chademo_can_test_main.c  chademo_config.h  chademo_fsm.c  chademo_fsm.h  chademo_hal.c  chademo_hal.h  chademo_infypower.c  chademo_infypower.h  chademo_log_20260504_203746.txt  chademo_log_20260504_204525.txt  chademo_log_20260504_204858.txt  chademo_log_20260504_205318.txt  chademo_log_20260504_211633.txt  chademo_log_20260504_212037.txt  chademo_log_20260504_212205.txt  chademo_log_20260504_212702.txt  chademo_log_20260504_213126.txt  chademo_log_20260504_213423.txt  chademo_log_20260504_215608.txt  chademo_log_20260504_215613.txt  chademo_log_20260504_220325.txt  chademo_log_20260505_000405.txt  dcp_test_main.c  main.c
CHAdeMO_Firmware/chademo_firmware/build_station/: CMakeCache.txt  Makefile  cmake_install.cmake
CHAdeMO_Firmware/chademo_firmware/build_vehicle/: CMakeCache.txt  Makefile  cmake_install.cmake
Energica_Display_Test/chademo_firmware/: CMakeLists.txt  README.md  chademo_config.h  chademo_fsm.c  chademo_fsm.h  chademo_hal.c  chademo_hal.h  energica_bridge.py  energica_can_bridge.c  energica_display_alive.c  energica_display_focused.c  energica_display_manual.c  energica_display_probe.c  energica_logger.py  energica_screen_hunt.py  main.c  monitor_serial.sh
Energica_Display_Test/chademo_firmware/mock_pico/hardware/: gpio.h  timer.h
Energica_Display_Test/chademo_firmware/mock_pico/pico/: platform.h  stdlib.h  time.h
MainBoard/: ADC.kicad_sch  Control.kicad_sch  IsolatedCanbus.kicad_sch  MainBoard.kicad_pcb  MainBoard.kicad_pro  MainBoard.kicad_sch  OutputRelays.kicad_sch  ThermalManagement.kicad_sch  fp-info-cache  ~MainBoard.kicad_pcb.lck
MainBoard/Fab/: MainBoard-B_Cu.gbr  MainBoard-F_Cu.gbr  MainBoard-F_Paste.gbr  MainBoard-NPTH.drl  MainBoard-top.pos
MainBoard/bom/: ibom.html
NeoMBB/: 5VADCFilter.kicad_sch  ABS.kicad_sch  ADC1.kicad_sch  ADC2.kicad_sch  AnalogInFilters.kicad_sch  Annotated_Wiring_Harness.ods  CAN.kicad_sch  ChargerInterface.kicad_sch  Connectors.kicad_sch  Control.kicad_sch  ControlBoard.kicad_prl  ControlBoard.kicad_sch  ControlBoard.step  DashInterface.kicad_sch  GateDriver.kicad_sch  GateDriverAssembly.kicad_sch  HVIL.kicad_sch  HighSideOutputs.kicad_sch  InverterInterface.kicad_sch  IsolatedCanbus.kicad_sch  MainBoard.kicad_pcb  MainBoard.kicad_prl  MainBoard.kicad_pro  MainBoard.kicad_sch  PartsLib  Power.kicad_sch  SensorIO.kicad_sch  VoltageSenseBiased.kicad_sch  VoltageSenseInputStage.kicad_sch  VoltageSenseInputStage4.kicad_sch  _autosave-MainBoard.kicad_prl  fp-info-cache  fp-lib-table  sym-lib-table
NeoMBB/Fab/: MainBoard-B_Mask.gbr  MainBoard-B_Paste.gbr  MainBoard-B_Silkscreen.gbr  MainBoard-Edge_Cuts.gbr  MainBoard-F_Mask.gbr  MainBoard-F_Silkscreen.gbr  MainBoard-In1_Cu.gbr  MainBoard-In2_Cu.gbr  MainBoard-PTH.drl  MainBoard-bottom.pos  MainBoard-job.gbrjob  MainBoard.csv
PartsLib/: Grab3D.py  InverterCom.bak  InverterCom.kicad_sym
PartsLib/3D/: 1.5SMC530A.stp  1548129.stp  1987724.stp  1SMB5956BT3G.stp  38969-0002.stp  5442251.stp  677-15ABPE.stp  776275-1.stp  ALH82A750CB600.stp  C4AQNBW5200M3LJ.stp  CM600HA-24H.stp  D25S33E4PA00LF.stp  DE09-PA-M1.stp  DRDNB21D-7.stp  FZ400R12KE4.stp  HCPL-316J-500E.stp  IHDM1008BCEV2R2M20.stp  JCB0312S24.stp  LM5185QPWPRQ1.stp  MBRA340T3G.stp  MCP23S17-E_SO.stp  MJE2955TG.stp  MJE3055TG.stp  MUR1100ERLG.stp  NCD57084DR2G.stp  R-78K3.3-1.0.stp  RC2512JK-071ML.stp  RD7-12S033R.stp  RKE-1205S_H.stp  S3N.stp  SCW20A-15.stp  STWA75N60M6.stp  TBD62783AFG,EL.stp  TBP01R1-508-08BE.stp  TBP01R2-508-04BE.stp  TBP02R1-381-02BE.stp  TBP02R2W-381-06BE.stp  TJA1050T_CM,118.stp  UCM1H101MCL1GS.stp  UCS2C331MHD.stp  (+2 more)
PartsLib/InverterCom.pretty/: 1548129.kicad_mod  1987724.kicad_mod  1SMB2EZ15_R1_00001.kicad_mod  389690002.kicad_mod  5-106505-2_3.kicad_mod  5442251.kicad_mod  62mm_power_module.kicad_mod  67715ABPE.kicad_mod  7466205R.kicad_mod  7762311.kicad_mod  7762751.kicad_mod  ACS772ECB200BPFFT.kicad_mod  ACT45B1012PTL003.kicad_mod  ALH82A750CB600.kicad_mod  AWHSH105D00G.kicad_mod  Arduino_UNO_R3_ModifiedCourtyard.kicad_mod  B32652__18_x_9_.kicad_mod  B32774X__31.5_x_12.5_.kicad_mod  BEADC1608X100N.kicad_mod  BusBarConnection.kicad_mod  C4AQNBW5200M3LJ.kicad_mod  CAPAE660X800N.kicad_mod  CAPPRD1000W190D2250H2700.kicad_mod  CAPPRD500W60D1025H1750.kicad_mod  CAPPRD750W80D1825H3200.kicad_mod  CM600HA-24H-Gate.kicad_mod  CM600HA-24H-PWR.kicad_mod  Char_AllelujahHaptism_20mm.kicad_mod  Char_GaelioBauduin_20mm.kicad_mod  Char_GaelioBauduin_30mm.kicad_mod  Char_McGillisFareed_20mm.kicad_mod  Char_McGillisFareed_30mm.kicad_mod  Char_SetsunaFSeiei_20mm.kicad_mod  Char_TieriaErde.kicad_mod  Char_TieriaErde_20mm.kicad_mod  Char_TieriaErde_25mm.kicad_mod  D25S33E4PA00LF.kicad_mod  DE09PAM1.kicad_mod  DIOAD1405W86L465D235.kicad_mod  DIOM5226X220N.kicad_mod  (+73 more)
PartsLib/Lib/: CelstialBeing.kicad_mod  CelstialBeing_L.kicad_mod  CelstialBeing_S.kicad_mod  Char_AllelujahHaptism.kicad_mod  Char_AllelujahHaptism_20mm.kicad_mod  Char_GaelioBauduin_20mm.kicad_mod  Char_GaelioBauduin_30mm.kicad_mod  Char_McGillisFareed_20mm.kicad_mod  Char_McGillisFareed_30mm.kicad_mod  Char_NeilDylandy.kicad_mod  Char_SetsunaFSeiei_20mm.kicad_mod  Char_TieriaErde.kicad_mod  Char_TieriaErde_20mm.kicad_mod  Char_TieriaErde_25mm.kicad_mod  HIGHVOLTAGE_20mm.kicad_mod  HIGHVOLTAGE_40mm.kicad_mod  Logo_Gjallahorn_10mm.kicad_mod  Logo_Gjallahorn_20mm.kicad_mod  Logo_Gjallahorn_30mm.kicad_mod  Logo_Gjallahorn_40mm.kicad_mod
PartsLib/Lib/LIB_S3N/S3N/: S3N.epw  (+1 more)
(+4388 files in other folders)
